--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -46,7 +46,7 @@ input{
 	display: flex;
 	margin: 20px auto;
 	padding: 10px;
-	border: none;
+	border: 2px solid #eee;
 	outline: none;
 	border-radius: 5px;
 }
