--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -9,11 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/toast.css" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link
-      href="assets/css/bootstrap.min.css"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.dataTables.min.js"></script>
@@ -60,8 +64,18 @@
       </div>
     </nav>
     <div class="container mt-4" id="users">
-      <h3>Users</h3>
-      <br />
+      <div class="float-left"><h3>Users</h3></div>
+      <div class="float-right">
+        <button
+          class="btn btn-primary"
+          data-toggle="modal"
+          data-target="#formModal"
+        >
+          <i class="fa fa-add"></i> Add User
+        </button>
+      </div>
+      <br /><br />
+      <br /><br />
       <table
         id="example"
         class="table table-striped table-bordered"
@@ -75,9 +89,10 @@
             <th>E-Mail</th>
             <th>Role</th>
             <th>Joined</th>
+            <th>Actions</th>
           </tr>
         </thead>
-        
+
         <tbody>
           <tr>
             <td>1</td>
@@ -85,17 +100,199 @@
             <td>admin@admin.com</td>
             <td>admin</td>
             <td>2022/04/25</td>
+            <td>
+              &nbsp;&nbsp;
+              <span><i class="fas fa-edit"></i></span>
+              &nbsp;
+              <span><i class="fas fa-trash"></i></span>
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="formModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="formModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="formModalLabel">Add User</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form name="add-user" id="add-user">
+              <div class="form-group">
+                <label for="name">Username</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  name="name"
+                  aria-describedby="emailHelp"
+                  placeholder="Enter username"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="email">Email address</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  aria-describedby="emailHelp"
+                  placeholder="Enter email"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  placeholder="Password"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="role">Role</label>
+                <br />
+                <select class="form-control" id="role" name="role" aria-label=".form-select-lg example">
+                  <option value="employee" selected>Employee</option>
+                  <option value="manager">Manager</option>
+                  <option value="admin">Admin</option>
+                </select>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+              >
+              Close
+            </button>
+            <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
+    <!-- Modal end -->
+    <!-- Create User Modal -->
+    <div
+      class="modal fade"
+      id="create-item"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="myModalLabel"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span><i class="fa-solid fa-rectangle-xmark"></i></span>
+            </button>
+            <h4 class="modal-title" id="myModalLabel">Create Item</h4>
+          </div>
+
+          <div class="modal-body">
+            <form data-toggle="validator" name="add_user" method="POST">
+              <div class="form-group">
+                <label class="control-label" for="username">Username:</label>
+                <input
+                  type="text"
+                  name="name"
+                  class="form-control"
+                  data-error="Please enter username."
+                  required
+                />
+                <div class="help-block with-errors"></div>
+              </div>
+
+              <div class="form-group">
+                <label class="control-label" for="email">Email:</label>
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control"
+                  data-error="Please enter valid email."
+                  required
+                />
+                <div class="help-block with-errors"></div>
+              </div>
+
+              <div class="form-group">
+                <label class="control-label" for="password">Password:</label>
+                <input
+                  type="text"
+                  name="password"
+                  class="form-control"
+                  data-error="Please enter password."
+                  required
+                />
+                <div class="help-block with-errors"></div>
+              </div>
+
+              <div class="form-group">
+                <label class="control-label" for="role">Role:</label>
+                <input
+                  type="text"
+                  name="role"
+                  class="form-control"
+                  data-error="Please enter Role."
+                  required
+                />
+                <div class="help-block with-errors"></div>
+              </div>
+
+              <div class="form-group">
+                <button
+                  type="submit"
+                  id="createBtn"
+                  class="btn crud-submit btn-success"
+                >
+                  Submit
+                </button>
+                <p style="color: red; padding: 10px" id="add-error"></p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/toast.js"></script>
+    <script src="assets/js/validator.js"></script>
+    <script src="assets/js/admin.js"></script>
     <!-- bootstrap5 dataTables js cdn -->
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
     <script>
       $(document).ready(function () {
-        $("#example").DataTable();
+        $("#example").DataTable({ searching: false });
       });
     </script>
   </body>
