--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -18,10 +18,10 @@
       <div class="login">
         <form name="login" id="login">
           <label for="chk" aria-hidden="true">Login</label>
-          <input type="text" name="name" placeholder="Username" required />
+          <input type="text" name="name" id="lname" placeholder="Username" required />
           <input
             type="password"
-            id="password"
+            id="lpassword"
             name="password"
             placeholder="Password"
             required
@@ -35,38 +35,40 @@
           <label for="chk" aria-hidden="true">Sign up</label>
           <input
             type="text"
-            id="name1"
+            id="name"
             name="name"
             placeholder="User name"
             required
           />
           <input
             type="email"
-            id="email1"
+            id="email"
             name="email"
             placeholder="Email"
             required
           />
           <input
             type="password"
-            id="password1"
+            id="password"
             name="password"
             placeholder="Password"
             required
           />
           <input
             type="password"
-            id="cpassword1"
+            id="cpassword"
             name="cpassword"
+            onfocusout="passwordCheck()"
             placeholder="Confirm Password"
             required
           />
-          <p id="error" style="color: red"></p>
           <button type="submit" id="registerBtn">Sign up</button>
+          <p id="error" style="color: red"></p>
         </form>
       </div>
     </div>
   </body>
+  <script src="assets/js/validator.js"></script>
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/login.js"></script>
   <script src="assets/js/cookies.js"></script>
