--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/cookies.js"></script>
     <script src="assets/js/checkuser.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -70,7 +69,7 @@
           data-toggle="modal"
           data-target="#formModal"
         >
-          <i class="fa fa-add"></i> Add User
+          <i class="fa fa-add"></i>Add User
         </button>
       </div>
       <br /><br /><br />
@@ -82,6 +81,7 @@
       >
         <thead>
           <tr>
+            <th>uid</th>
             <th>SNo</th>
             <th>Username</th>
             <th>E-Mail</th>
