--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -9,6 +9,7 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/toast.css" />
+    <link rel="stylesheet" href="assets/css/modal.css" />
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -277,6 +278,31 @@
     </div>
     <!-- Modal end -->
 
+    <!-- Confirm Modal -->
+<div id="deleteModal" class="modal fade">
+	<div class="modal-dialog modal-confirm">
+		<div class="modal-content">
+			<div class="modal-header flex-column">
+				<div class="icon-box">
+          <i class="fas fa-times-circle"></i>
+				</div>						
+				<h4 class="modal-title w-100">Are you sure?</h4>	
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			</div>
+          <form id="delete-user" name="delete-user">
+
+			<div class="modal-body">
+				<p>Do you really want to delete these records? This process cannot be undone.</p>
+			</div>
+      
+			<div class="modal-footer justify-content-center">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+				<button type="submit" class="btn btn-danger">Delete</button>
+			</div>
+      </form>
+		</div>
+	</div>
+
     </div>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
     <script src="assets/js/jquery.min.js"></script>
@@ -284,6 +310,7 @@
     <script src="assets/js/toast.js"></script>
     <script src="assets/js/validator.js"></script>
     <script src="assets/js/admin.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
     <script src="assets/js/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap5.min.js"></script>
   </body>
