--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -30,13 +30,13 @@
             <div class="navbar-collapse collapse flex-grow-1 justify-content-center" id="navbar5">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#users">Users</a>
+                        <a class="nav-link" href="admin">Users</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="admin_projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#tasks">Tasks</a>
+                        <a class="nav-link" href="admin_tasks">Tasks</a>
                     </li>
                 </ul>
                 <div class="flex-grow-1"></div>
