--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="admin_projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#tasks">Tasks</a>
+                        <a class="nav-link" href="admin_tasks">Tasks</a>
                     </li>
                 </ul>
                 <div class="flex-grow-1"></div>
